# monograph

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  hello.py  pyproject.toml  schema.gql
app/: entities.py  settings.py
app/adapters/postgresql/: models.py  registry.py  repositories.py
app/handlers/api/: api.py
app/handlers/graphql/: __init__.py  models.py  mutation.py  query.py
migrations/: env.py
migrations/versions/: bf376a9e0ebe_init.py
